# wge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTING_ZH.md  README.md  README_CN.md  README_ZH.md  clang-format.sh  vcpkg-configuration.json  vcpkg.json
.githooks/: commit-msg  pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  refactor.md
.github/workflows/: build-docker-image.yml  check_pr.yml  hugo-docs.yml  test.yml
benchmarks/modsecurity/: CMakeLists.txt  main.cc
benchmarks/srsecurity/: CMakeLists.txt  main.cc
benchmarks/test_data/: CMakeLists.txt  black.data  http_info.h  parser.rl  request.h  response.h  test_data.cc  test_data.h  (+1 more)
docs/: hugo.toml
src/: CMakeLists.txt  audit_log_config.h  config.h  engine.cc  engine.h  engine_config.h  http_extractor.h  marker.cc  marker.h  rule.cc  rule.h  transaction.cc  transaction.h
src/action/: CMakeLists.txt  action_base.h  actions_include.h  ctl.cc  ctl.h  id.h  initcol.cc  initcol.h  msg.h  ref.h  set_env.cc  set_env.h  set_rsc.cc  set_rsc.h  set_sid.cc  set_sid.h  set_uid.cc  set_uid.h  set_var.cc  set_var.h  t.cc  t.h  tag.h
src/antlr4/: CMakeLists.txt  SecLangLexer.g4  SecLangParser.g4  parser.cc  parser.h  parser.inl  visitor.cc  visitor.h
src/antlr4/debug/: CMakeLists.txt  debug_lexer.cc  debug_lexer.sh  debug_parser.cc  debug_parser.sh
src/common/: CMakeLists.txt  assert.h  duration.h  empty_string.h  evaluate_result.h  hash_table.hpp  lru_cache.hpp  pcre.cc  pcre.h  property_store.cc  property_store.h  property_tree.h  sha1.h  shm.hpp  string.h  util.h  variant.h
src/common/hyperscan/: expression.cc  expression.h  hs_database.cc  hs_database.h  sanner.cc  scanner.h  scratch.h
src/common/literal_match/: sanner.cc  scanner.cc  scanner.h
src/common/pcre/: pattern.cc  pattern.h  scanner.cc  scanner.h  scratch.cc  scratch.h
src/common/ragel/: CMakeLists.txt  common.h  json.cc  json.h  json.rl  multi_part.cc  multi_part.h  multi_part.rl  query_param.cc  query_param.h  query_param.rl  uri_parser.rl  xml.cc  xml.h  xml.rl
src/common/re2/: scanner.cc  scanner.h
src/macro/: CMakeLists.txt  factory.cc  factory.h  highest_severity.h  macro_base.cc  macro_base.h  macro_factory.cc  macro_factory.h  macro_include.h  matched_var.h  matched_var_name.h  multi_macro.h  multipart_strict_error.h  remote_addr.h  reqbody_error_msg.h  rule.h  session.h  tx.h  user_id.h  variable_macro.h
src/operator/: CMakeLists.txt  begins_with.h  contains.h  contains_word.h  detect_sqli.cc  detect_sqli.h  detect_xss.cc  detect_xss.h  ends_with.h  eq.h  fuzzy_hash.h  ge.h  geo_lookup.h  gt.h  inspect_file.h  ip_match.h  ip_match_from_file.h  le.h  lt.h  macro_logic_matcher.cc  macro_logic_matcher.h  no_match.h  operator_base.cc  operator_base.h  operator_include.h  pm.h  pm_from_file.cc  pm_from_file.h  rbl.h  rsub.h  rx.cc  rx.h  rx_global.h  streq.h  strmatch.h  unconditional_match.h  validate_byte_range.h  validate_dtd.h  validate_schema.h  validate_url_encoding.h  (+7 more)
src/parser/: CMakeLists.txt  SecLang.g4  parser.cc  parser.h  visitor.cc  visitor.h
src/persistent_storage/: CMakeLists.txt  collection.cc  collection.h  storage.cc  storage.h
src/rule/: rule_base.h
src/transformation/: CMakeLists.txt  base64_decode.cc  base64_decode.h  base64_decode_ext.h  base64_encode.h  cmd_line.cc  cmd_line.h  compress_whitespace.cc  compress_whitespace.h  css_decode.cc  css_decode.h  escape_seq_decode.cc  escape_seq_decode.h  hex_decode.cc  hex_decode.h  hex_encode.h  html_entity_decode.cc  html_entity_decode.h  js_decode.cc  js_decode.h  length.cc  length.h  lowercase.cc  lowercase.h  md5.h  none.h  normalise_path.cc  normalise_path.h  normalise_path_win.cc  normalise_path_win.h  normalize_path.cc  normalize_path.h  normalize_path_win.cc  normalize_path_win.h  parity_even_7bit.h  parity_odd_7bit.h  parity_zero_7bit.h  remove_comments.cc  remove_comments.h  remove_comments_char.cc  (+31 more)
src/transformation/modsecurity/: util.cc  util.h
src/transformation/ragel/: CMakeLists.txt  base64_decode.rl  cmd_line.rl  compress_whitespace.rl  css_decode.rl  escape_seq_decode.rl  hex_decode.rl  html_entity_decode.rl  js_decode.rl  lowercase.rl  normalize_path.rl  normalize_path_win.rl  remove_comments.rl  remove_comments_char.rl  remove_nulls.rl  remove_whitespace.rl  replace_comments.rl  replace_nulls.rl  trim_left.rl  trim_right.rl  url_decode.rl  url_decode_uni.rl  utf8_to_unicode.rl
src/variable/: args.cc  args.h  args_combined_size.h  args_get.h  args_get_names.h  args_names.h  args_post.h  args_post_names.h  auth_type.h  collection_base.cc  collection_base.h  current_optree.h  current_vptree.h  duration.h  env.h  evaluate_help.h  files.h  files_combined_size.h  files_names.h  files_sizes.h  files_tmp_content.h  files_tmp_names.h  files_tmpnames.h  full_name.h  full_request.h  full_request_length.h  geo.h  global.h  highest_severity.h  inbound_data_error.cc  inbound_data_error.h  ip.h  matched_optree.h  matched_ptree_base.h  matched_var.h  matched_var_name.h  matched_vars.h  matched_vars_names.h  matched_vptree.h  modsec_build.h  (+82 more)
test/: CMakeLists.txt
test/integration/: 01_variable.cc  01_variable_test.data  02_rule_operator_test.cc  03_rule_action_test.cc  04_rule_evaluate_logic_test.cc  99_crs_test.cc  CMakeLists.txt  crs_test.cc  rule_action_test.cc  rule_evaluate_logic.cc  rule_evaluate_logic_test.cc  rule_operator_test.cc  variable.cc
test/parser/: CMakeLists.txt  action_evaluate_test.cc  audit_log_config_test.cc  engine_action_test.cc  engine_config_test.cc  include_test.cc  parser.cc  parser_test.cc  rule_action.cc  rule_action_parse_test.cc  rule_directive_test.cc  rule_operator.cc  rule_operator_parse_test.cc  rule_variable_parse_test.cc
tools/: perf_modsecurity_benchmark.sh  perf_modsecurity_benchmark_cache_misses.sh  perf_modsecurity_benchmark_tcmalloc.sh  perf_srsecurity_benchmark.sh  perf_srsecurity_benchmark_cache_misses.sh  setup_git_hooks.sh  svg_modsecurity_benchmark.sh  svg_modsecurity_benchmark_tcmalloc.sh  svg_srsecurity_benchmark.sh
(+1224 files in other folders)
